--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          pyhon3 -m pip install pip install dbt-postgres
+          python3 -m pip install pip install dbt-postgres
       - uses: yu-iskw/action-sqlfluff@v3
         id: lint-sql
         with:
